--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -88,6 +88,7 @@ $body-heading-line-height: 1.15 !default !default;
   --base-button-color: #f7f7f7;
   --border-color: var(--grey-lt-000);
   --table-background-color: var(--grey-lt-300);
+  --table-background-color-accent: var(--grey-lt-200);
 
   --main-color: hsl(174, 42%, 51%);
 
